[package]
name = "readelf"
version = "0.0.6"
authors = ["Christopher Cole <chris.cole.09@gmail.com>"]
license = "MIT"
repository = "https://github.com/cole14/rust-readelf/"
description = "A pure-rust implementation of the binutils utility readelf"
keywords = ["elf", "readelf"]
readme = "README.md"

[[bin]]
name = "rust-readelf"
path = "src/rust-readelf.rs"

[dependencies]
clap = { version = "4", features = ["derive", "unicode"] }
comfy-table = "6.1.1"
elf = "^0.6.0"

